[FIX]Corrección META descripción

--- a/contacto.html
+++ b/contacto.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="En nuestro sitio web especializado en mastering, ofrecemos un servicio profesional de masterización de audio para productores y músicos. Obtén la mejor calidad de audio para tus producciones musicales. Además, en nuestro sitio web encontrarás información valiosa sobre el proceso de masterización y consejos para mejorar la calidad de tus producciones musicales. ¡Contáctanos hoy para obtener más información y mejorar la calidad de tu música!">
-    <meta name="keywords" content="mastering, masterizar, producción musical, audio, música">
-    <meta name="author" content="viejomastering">
+        content="Recopilación de mis producciones a la fecha, detalles sobre mi trabajo y datos de contacto">
+    <meta name="keywords" content="producción musical, producción, música, grabación, mezcla, mastering, audio, música">
+    <meta name="author" content="aquiestawally producciones">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wally producciones</title>
+    <title>aquiestawally producciones</title>
     <!-- TODO CAMBIAR EL ICONO -->
     <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png" sizes="16x16">
     <!-- TODO CAMBIAR EL ICONO -->
@@ -129,37 +129,7 @@
                     </div>
                 </form>
                 <span class="division"></span>
-                <!-- <div class="info-contacto">
-                    <h3>Información extra</h3>
-                    <div class="info-contacto__campos info-contacto__campos-extras">
-                        <div class="form-info__faq"><span>1.</span>
-                            <p>
-                                LLene todos los campos para obtener una mayor información.
-                            </p>
-                            <p>
-                                Ante cualquier duda solo mande un correo a <strong> <a
-                                        href="mailto:viejomastering@gmail.com">correo@gmail.com</a>
-                                </strong>
-                                y le responderemos lo antes posible.
-                            </p>
-                        </div>
-                        <div class="form-info__faq"><span>2.</span>
-                            <p>
-                                Recuerde enviar sus mezclas mediante <strong>wetransfer</strong>, adjunte también sus
-                                referencias si es que es lo que necesita.
-                            </p>
-                            <p>
-                                En caso de ser un enlace, puede dejarlo en los comentarios.
-                            </p>
-                        </div>
-                        <div class="form-info__faq"><span>3.</span>
-                            <p>
-                                El campo de fecha de mastering sólo se puede llenar una vez llene el campo de fecha de
-                                envío de mezclas.
-                            </p>
-                        </div>
-                    </div>
-                </div> -->
+           
             </div>
 
             <div class="mensajeForm" id="mensajeForm">
@@ -168,18 +138,6 @@
             </div>
         </section>
 
-        <!-- <section class="form-faqs" id="form-faqs">
-            <div class="bajada-form">
-                <p>Ante cualquier inquietud, no dude en enviar un correo a <strong>
-                        <a href="mailto:viejomastering@gmail.com">correo@gmail.com</a>
-                    </strong>
-                </p>
-            </div>
-            <div class="bajada-form">
-                <p>Recuerde visitar las preguntas frecuentes para más información.</p>
-                <a class="link-a" href="./faqs.html">FAQ's</a>
-            </div>
-        </section> -->
     </main>
 
     <footer class="container-footer">
@@ -187,7 +145,6 @@
             <div class="secciones-footer">
                 <ul class="secciones-footer__list">
                     <li><a href="mailto:wallyproduccionmusical@gmail.com">wallyproduccionmusical@gmail.com</a></li>
-                    <!-- <li><a href="https://viejomastering.wordpress.com/">Blog</a></li> -->
                     <li><a href="#">Contacto </a></li>
                 </ul>
             </div>
@@ -209,12 +166,9 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="bajada-footer">
-            <p class="firma-fdiazg-dev"> fdiazg.dev 👋</p>
-        </div> -->
+
     </footer>
 
-    <!-- <script src="./js/app.js"></script> -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="./js/contacto.js"></script>
     <script src="./js/menu.js"></script>
