--- a/servicios.html
+++ b/servicios.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="En nuestro sitio web especializado en mastering, ofrecemos un servicio profesional de masterización de audio para productores y músicos. Obtén la mejor calidad de audio para tus producciones musicales. Además, en nuestro sitio web encontrarás información valiosa sobre el proceso de masterización y consejos para mejorar la calidad de tus producciones musicales. ¡Contáctanos hoy para obtener más información y mejorar la calidad de tu música!">
-    <meta name="keywords" content="mastering, masterizar, producción musical, audio, música">
-    <meta name="author" content="viejomastering">
+        content="Recopilación de mis producciones a la fecha, detalles sobre mi trabajo y datos de contacto">
+    <meta name="keywords" content="producción musical, producción, música, grabación, mezcla, mastering, audio, música">
+    <meta name="author" content="aquiestawally producciones">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wally producciones</title>
+    <title>aquiestawally producciones</title>
     <!-- TODO CAMBIAR EL ICONO -->
     <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png"
         sizes="16x16">
@@ -196,7 +196,6 @@
             <div class="secciones-footer">
                 <ul class="secciones-footer__list">
                     <li><a href="mailto:wallyproduccionmusical@gmail.com">wallyproduccionmusical@gmail.com</a></li>
-                    <!-- <li><a href="https://viejomastering.wordpress.com/">Blog</a></li> -->
                     <li><a href="./contacto.html">Contacto </a></li>
                 </ul>
             </div>
@@ -218,12 +217,9 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="bajada-footer">
-            <p class="firma-fdiazg-dev"> fdiazg.dev 👋</p>
-        </div> -->
+
     </footer>
 
-    <!-- <script src="../js/app.js"></script> -->
     <script src="./js/faqs.js"></script>
     <script src="./js/menu.js"></script>
 
