--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="En nuestro sitio web especializado en mastering, ofrecemos un servicio profesional de masterización de audio para productores y músicos. Obtén la mejor calidad de audio para tus producciones musicales. Además, en nuestro sitio web encontrarás información valiosa sobre el proceso de masterización y consejos para mejorar la calidad de tus producciones musicales. ¡Contáctanos hoy para obtener más información y mejorar la calidad de tu música!">
-    <meta name="keywords" content="mastering, masterizar, producción musical, audio, música">
-    <meta name="author" content="viejomastering">
+        content="Recopilación de mis producciones a la fecha, detalles sobre mi trabajo y datos de contacto">
+    <meta name="keywords" content="producción musical, producción, música, grabación, mezcla, mastering, audio, música">
+    <meta name="author" content="aquiestawally producciones">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wally Producciones</title>
+    <title>aquiestawally producciones</title>
     <!-- TODO CAMBIAR EL ICONO -->
-    <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png"
+        sizes="16x16">
     <!-- TODO CAMBIAR EL ICONO -->
 
     <link rel="stylesheet" href="./css/styles.css">
@@ -37,7 +38,8 @@
 
             <div class="logo">
                 <a href="./index.html">
-                    <img src="./material_grafico/logotipo/Wally-Logotipo-V1-Crema.png" alt="Logo" class="user-block__logo">
+                    <img src="./material_grafico/logotipo/Wally-Logotipo-V1-Crema.png" alt="Logo"
+                        class="user-block__logo">
                 </a>
             </div>
 
@@ -65,9 +67,8 @@
             <div class="rrss">
                 <ul class="nav-rrss">
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link"
-                            href="https://spotify.link/dqPvOKqxoDb"
-                            target="_blank"><i class="bi bi-spotify"></i></a>
+                        <a class="nav-rrss__item-link" href="https://spotify.link/dqPvOKqxoDb" target="_blank"><i
+                                class="bi bi-spotify"></i></a>
                     </li>
                 </ul>
             </div>
@@ -92,14 +93,7 @@
             </div>
             <div class="container-mastering__img">
 
-                <!-- <div class="container-botones">
-                    <button id="izquierda" class="btn-flechas ocultar-botones">
-                        <i class="bi bi-arrow-left-circle"></i>
-                    </button>
-                    <button id="derecha" class="btn-flechas">
-                        <i class="bi bi-arrow-right-circle"></i>
-                    </button>
-                </div> -->
+
             </div>
             <div class="loader">
                 <div class="lds-dual-ring"></div>
@@ -120,11 +114,7 @@
             </div>
         </div>
 
-        <!-- <section>
-            <div class="info-mastering">
 
-            </div>
-        </section> -->
     </main>
 
     <footer class="container-footer">
@@ -132,16 +122,14 @@
             <div class="secciones-footer">
                 <ul class="secciones-footer__list">
                     <li><a href="mailto:wallyproduccionmusical@gmail.com">wallyproduccionmusical@gmail.com</a></li>
-                    <!-- <li><a href="https://viejomastering.wordpress.com/">Blog</a></li> -->
                     <li><a href="./contacto.html">Contacto </a></li>
                 </ul>
             </div>
             <div class="rrss">
                 <ul class="footer-rrss">
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link"
-                            href="https://spotify.link/dqPvOKqxoDb"
-                            target="_blank"><i class="bi bi-spotify"></i></a>
+                        <a class="nav-rrss__item-link" href="https://spotify.link/dqPvOKqxoDb" target="_blank"><i
+                                class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
@@ -154,16 +142,14 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="bajada-footer">
-            <p class="firma-fdiazg-dev"> fdiazg.dev 👋</p>
-        </div> -->
+
     </footer>
 
     <script src="./js/app.js"></script>
     <script src="./js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
