[ADD]imagenes about

--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
                 <div class="lds-dual-ring"></div>
             </div>
             <div class="main-contacto" id="main-contacto">
-                <form action="" name="form" id="form" netlify method="POST">
+                <form action="" name="contact" id="form" netlify method="POST">
                     <div class="info-contacto">
                         <h3>Información de contacto</h3>
                         <div class="info-contacto__campos">
