--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -96,7 +96,7 @@
                 <div class="about-descripcion-seccion">
                     <h4>Presentación:</h4>
                     <div class="contenido-about">
-                        <img src="./img/img.jpg" alt="img">
+                        <img src="./img/Foto_1.jpg" alt="img" class="img-about">
                         <div class="text-about">
                             <p>Hola! Mi nombre es Wally y soy une productore no binarie. La mayoría de mi trabajo se
                                 realiza
@@ -150,7 +150,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="./img/img.jpg" alt="img">
+                        <img src="./img/Foto_2.jpg" alt="img" class="img-about">
 
                     </div>
                 </div>
@@ -171,31 +171,16 @@
                         <div class="splide__track">
                             <ul class="splide__list">
                                 <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img" width="250px">
+                                    <img src="./img/240986231_137051291888253_3581188635930770131_n.jpg" alt="img" width="250px">
                                 </li>
                                 <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
+                                    <img src="./img/352828491_202980419361429_1400121210894376942_n.jpg" alt="img"  width="250px">
                                 </li>
                                 <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
+                                    <img src="./img/aa.jpeg" alt="img"  width="250px">
                                 </li>
                                 <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
-                                </li>
-                                <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
-                                </li>
-                                <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
-                                </li>
-                                <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
-                                </li>
-                                <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
-                                </li>
-                                <li class="splide__slide">
-                                    <img src="./img/img.jpg" alt="img"  width="250px">
+                                    <img src="./img/YorchMedina-1447.jpg" alt="img"  width="250px">
                                 </li>
                             </ul>
                         </div>
