--- a/servicios.html
+++ b/servicios.html
@@ -55,6 +55,9 @@
                             <a class="main-nav__link" href="./sobre-mi.html" data-destino="contacto">Sobre mí</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
+                            <a class="main-nav__link" href="./resenias.html" data-destino="contacto">Reseñas</a>
+                        </li>
+                        <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
                         </li>
                     </ul>
