--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -65,6 +65,9 @@
                             <a class="main-nav__link" href="#" data-destino="contacto">Sobre mí</a>
                         </li>
                         <li class="main-nav__item main-nav__link-activo">
+                            <a class="main-nav__link" href="./resenias.html" data-destino="contacto">Reseñas</a>
+                        </li>
+                        <li class="main-nav__item main-nav__link-activo">
                             <a class="main-nav__link" href="./contacto.html" data-destino="contacto">Contacto</a>
                         </li>
                     </ul>
