[FIX]review link

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/" target="_blank"><i
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
