--- a/servicios.html
+++ b/servicios.html
@@ -210,7 +210,7 @@
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"><i
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/" target="_blank"><i
                                 class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
