--- a/resenias.html
+++ b/resenias.html
@@ -90,58 +90,7 @@
             </div>
             <div class="main-review">
                 <ul class="review-lista">
-                    <li class="quote-review">
-                        <div class="quote-title">
-                            <h4>Pulento</h4>
-                            <div class="quote-star">★★★★★</div>
-                            <div class="quote-author">wally</div>
-                            <a target="_blank" href="https://www.instagram.com/aquiestawally/"><div class="quote-date">@wally</div></a>
-                        </div>
-                        <div class="quote-text">
-                            <p>
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                            </p>
-                        </div>
-                    </li>
-                    <li class="quote-review">
-                        <div class="quote-title">
-                            <h4>Pulento</h4>
-                            <div class="quote-star">★★★★</div>
-                            <div class="quote-author">wally</div>
-                            <a target="_blank" href="https://www.instagram.com/aquiestawally/"><div class="quote-date">@wally</div></a>
-                        </div>
-                        <div class="quote-text">
-                            <p>
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                            </p>
-                        </div>
-                    </li>
-                    <li class="quote-review">
-                        <div class="quote-title">
-                            <h4>Pulento</h4>
-                            <div class="quote-star">★★★★★</div>
-                            <div class="quote-author">wally</div>
-                            <a target="_blank" href="https://www.instagram.com/aquiestawally/"><div class="quote-date">@wally</div></a>
-                        </div>
-                        <div class="quote-text">
-                            <p>
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                               Esta es una reseña de prueba de una página con cosas de prueba
-                            </p>
-                        </div>
-                    </li>
+  
 
                 </ul>
 
@@ -180,6 +129,7 @@
 
     <script src="./js/faqs.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/testimony.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
