[chg]cambio en valores y presentacion

--- a/servicios.html
+++ b/servicios.html
@@ -38,7 +38,8 @@
         <div class="contenedor-main">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="./material_grafico/logotipo/Wally-Logotipo-V1-Crema.png" alt="Logo" class="user-block__logo">
+                    <img src="./material_grafico/logotipo/Wally-Logotipo-V1-Crema.png" alt="Logo"
+                        class="user-block__logo">
                 </a>
             </div>
 
@@ -67,9 +68,8 @@
             <div class="rrss">
                 <ul class="nav-rrss">
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link"
-                            href="https://spotify.link/dqPvOKqxoDb"
-                            target="_blank"><i class="bi bi-spotify"></i></a>
+                        <a class="nav-rrss__item-link" href="https://spotify.link/dqPvOKqxoDb" target="_blank"><i
+                                class="bi bi-spotify"></i></a>
                     </li>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                Valor $280.000
+                                Valor $300.000
                             </p>
                             <ul>
                                 <li>
@@ -103,10 +103,10 @@
 
                                 </li>
                                 <li>
-                                    <p> Grabación en el estudio “La Casa de la Olguita”</p>
+                                    <p> Grabación en el estudio “La Casa de la Olguita” (Cerro navia)</p>
                                 </li>
                                 <li>
-                                    <p> Grabación en RoomStudios (Rancagua, solo baterías) </p>
+                                    <p> Grabación de baterías en RoomStudios (Rancagua)</p>
                                 </li>
                                 <li>
                                     <p> Edición</p>
@@ -114,24 +114,38 @@
                                 <li>
                                     <p> Mezcla</p>
                                 </li>
+                                <li>
+                                    <p> Mastering (Realizado por @viejo_mastering)</p>
+                                </li>
+                                <li>
+                                    <p> Entrega de multipistas y stems al final del proceso
+                                    </p>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
-                        <h3>Mezcla</h3><i class="bi bi-chevron-down"></i>
+                        <h3>Mezcla y Mastering</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                $85.000
+                               Valor $100.000
                             </p>
                             <ul>
                                 <li>
-                                    <p> Incluye 3 revisiones </p>
+                                    <p> Mezcla realizada por @aquiestawally </p>
 
                                 </li>
                                 <li>
-                                    <p> Entrega de multitracks/Stems al final del proceso</p>
+                                    <p> Mastering realizado por @viejo_mastering</p>
+                                </li>
+                                <li>
+                                    <p> Entrega de multitracks/Stems al final del proceso
+                                    </p>
+                                </li>
+                                <li>
+                                    <p> No incluye edición</p>
                                 </li>
                             </ul>
                         </div>
@@ -142,17 +156,13 @@
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                En el estudio “La Casa de la Olguita”
+                                Valor $12000 x hora.
                             </p>
                             <ul>
                                 <li>
-                                    <p> $50.000 (6 horas) </p>
+                                    <p> En el estudio “La casa de la Olguita”. Incluye mi servicio como productore.</p>
 
                                 </li>
-                                <li>
-                                    <p> $20.000 (2 horas)</p>
-                                </li>
-
                             </ul>
                         </div>
                     </div>
@@ -161,10 +171,13 @@
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
-
+                            <p>
+                               Valor $20000
+                            </p>
                             <ul>
                                 <li>
-                                    <p> Videollamada a través de la plataforma “Muse Sessions” </p>
+                                    <p> Online a través de la plataforma “muse sessions” o presencial en el estudio “La
+                                        casa de la Olguita” (cerro navia) </p>
 
                                 </li>
 
@@ -205,13 +218,12 @@
             <div class="rrss">
                 <ul class="footer-rrss">
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link"
-                            href="https://spotify.link/dqPvOKqxoDb"
-                            target="_blank"><i class="bi bi-spotify"></i></a>
+                        <a class="nav-rrss__item-link" href="https://spotify.link/dqPvOKqxoDb" target="_blank"><i
+                                class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/" target="_blank"><i
-                                class="bi bi-instagram"></i></a>
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"
+                            target="_blank"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link" href="https://wa.me/971704471?text=Hola,%20que%20tal?"
