--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -101,10 +101,11 @@
                     <div class="contenido-about">
                         <img src="./img/Foto_1.jpg" alt="img" class="img-about">
                         <div class="text-about">
-                            <p>Hola! Mi nombre es Wally y soy une productore no binarie. La mayoría de mi trabajo se
-                                realiza
-                                en “La Casa de la Olguita”, espacio construido en la casa de mi abuela, en donde hemos
-                                trabajado la gran mayoría de los proyectos que pueden verse en esta página.
+                            <p>Hola! Mi nombre es Wally y productore no binarie, con 15 años de experiencia en el rubro,
+                                trabajando con artistas como gabriela arcos, gatajazz, cata teuber, Paralisis del Sueño,
+                                Los furtivos gnomos, entre otros. La mayoría de mi trabajo se realiza en mi estudio
+                                personal “La Casa de la Olguita”, pero también transito otros lugares como RoomStudios o
+                                EstudioZR.
                             </p>
                         </div>
                     </div>
@@ -174,16 +175,18 @@
                         <div class="splide__track">
                             <ul class="splide__list">
                                 <li class="splide__slide">
-                                    <img src="./img/240986231_137051291888253_3581188635930770131_n.jpg" alt="img" width="250px">
+                                    <img src="./img/240986231_137051291888253_3581188635930770131_n.jpg" alt="img"
+                                        width="250px">
                                 </li>
                                 <li class="splide__slide">
-                                    <img src="./img/352828491_202980419361429_1400121210894376942_n.jpg" alt="img"  width="250px">
+                                    <img src="./img/352828491_202980419361429_1400121210894376942_n.jpg" alt="img"
+                                        width="250px">
                                 </li>
                                 <li class="splide__slide">
-                                    <img src="./img/aa.jpeg" alt="img"  width="250px">
+                                    <img src="./img/aa.jpeg" alt="img" width="250px">
                                 </li>
                                 <li class="splide__slide">
-                                    <img src="./img/YorchMedina-1447.jpg" alt="img"  width="250px">
+                                    <img src="./img/YorchMedina-1447.jpg" alt="img" width="250px">
                                 </li>
                             </ul>
                         </div>
@@ -219,8 +222,8 @@
                             target="_blank"><i class="bi bi-spotify"></i></a>
                     </li>
                     <li class="nav-rrss__item">
-                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/" target="_blank"><i
-                                class="bi bi-instagram"></i></a>
+                        <a class="nav-rrss__item-link" href="https://www.instagram.com/aquiestawally/"
+                            target="_blank"><i class="bi bi-instagram"></i></a>
                     </li>
                     <li class="nav-rrss__item">
                         <a class="nav-rrss__item-link" href="https://wa.me/971704471?text=Hola,%20que%20tal?"
